--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 
 <script data-src="hcs://1/0.0.9976097" data-script-id="multiaddr@13.0.0"></script>
 
+<script data-src="hcs://1/0.0.10013779" data-script-id="multiformats@13.4.1"></script>
+
+<script data-src="hcs://1/0.0.10013806" data-script-id="delegated-peer-routing@4.0.14"></script>
+
+<script data-src="hcs://1/0.0.10013810" data-script-id="kubo-rpc-client@latest"></script>
+
+<script data-src="hcs://1/0.0.10013813" data-script-id="libp2p-noise@17.0.0"></script>
+
 <style>
 
 html, body {
@@ -795,7 +803,7 @@ button[type="submit"],
 <button id="toggle-controls-btn" class="menu_buttons" style="top: 6.5vh;">CONTROLS
 </button>
 
-<button id="toggle-your-fov-btn" class="menu_buttons" style="top: 11vh;">YOUR FOV
+<button id="toggle-your-fov-btn" class="menu_buttons" style="top: 11vh;">YOUR POV
 </button>
 
 <button id="toggle-visibility-controls-btn" class="menu_buttons" style="top: 15.5vh;">VISIBILITY
@@ -909,12 +917,21 @@ button[type="submit"],
     <textarea class="toolbar-column" id="cid-output" placeholder="CID" readonly></textarea>
 
     <textarea class="toolbar-column" id="cid-input" type="text" placeholder="Enter CID"></textarea>
+    
+    <!-- ADD THIS: Content type selector for fetch -->
+    <select class="toolbar-column" id="content-type">
+      <option value="image">Image/GIF</option>
+      <option value="video">Video</option>
+    </select>
+    
     <button class="toolbar-column-btns" id="fetch-from-ipfs-button">Fetch from IPFS</button>
-    <div id="cid-output"></div>
+    <div id="cid-output"></div> <!-- Note: You have two #cid-output elements; consider consolidating to one -->
     <div id="image-container"></div>
 
+    <button class="toolbar-column-btns" id="copy-share-link" style="display: none;">Copy Share Link</button>
+
   </div>
-</div>
+</div> <!-- Close the div properly -->
 
 <div id="create-column" style="display: none; position: absolute; z-index: 1002; top:10vh;">
   <div id="create-column-container" class="toolbar-containers" onclick="event.stopPropagation();">
@@ -2152,10 +2169,21 @@ document.getElementById('upload-to-ipfs-button').disabled = true;
 let helia = null;
 let fs = null;
 
+
+
 async function initHelia() {
+
+  console.log('Loaded globals check:');
+  console.log('- Helia:', !!window.Helia);
+  console.log('- HeliaUnixfs:', !!window.HeliaUnixfs);
+  console.log('- Libp2p:', !!window.Libp2p);
+  console.log('- KuboRpcClient:', !!window.KuboRpcClient);
+  console.log('- Libp2pDelegatedPeerRouting:', !!window.Libp2PDelegatedPeerRouting);
+  console.log('- ChainsafeLibp2pNoise:', !!window.ChainsafeLibp2PNoise);
+
   try {
-    if (!window.Helia || !window.HeliaUnixfs || !window.Libp2p) {
-      throw new Error('Helia, HeliaUnixfs, or libp2p not loaded.');
+    if (!window.Helia || !window.HeliaUnixfs || !window.Libp2p || !window.KuboRpcClient || !window.Libp2PDelegatedPeerRouting || !window.ChainsafeLibp2PNoise) {
+      throw new Error('Helia, HeliaUnixfs, libp2p, kubo-rpc-client, delegated-peer-routing, or chainsafe-libp2p-noise not loaded.');
     }
 
     const bootstrapList = [
@@ -2166,36 +2194,56 @@ async function initHelia() {
       '/dns4/ams-1.bootstrap.libp2p.io/tcp/443/wss/p2p/QmSoLer265NRgSp2LA3dPaeykiS1J6DifTC88f5uVQKNAd',
     ];
 
+    const noise = window.ChainsafeLibp2pNoise?.noise?.() || window.Libp2p?.noise?.();
+
+    console.log('noise', noise);
+
+    // NEW: Create Kubo RPC client for public delegate
+    const kuboClient = window.KuboRpcClient.create({
+      url: 'https://node0.delegate.ipfs.io'  // Public HTTPS delegate (handles /api/v0/dht/*)
+    });
+
     const libp2pOptions = {
       addresses: {
         listen: ['/webrtc', '/p2p-circuit'],
-        announce: ['/dns4/relay.libp2p.io/tcp/443/wss/p2p/QmRelay'],
+        announce: [
+          '/p2p-circuit/ip4/104.131.131.82/tcp/4001/p2p/QmaCpDMGvV2BGHeYERUEnRQAwe3N8SzbUtfsmvsqQLuvuJ',
+        ],
       },
       transports: [
         window.Libp2p.webRTC(),
         window.Libp2p.webSockets(),
         window.Libp2p.circuitRelayTransport({ discoverRelays: 10, reservationConcurrency: 5 }),
       ],
+      connectionEncryption: [noise],
       connectionManager: { minConnections: 2, maxConnections: 100 },
       peerDiscovery: [
         window.Libp2p.bootstrap({ list: bootstrapList, interval: 1000 }),
       ],
       services: {
         identify: window.Libp2p.identify(),
-        dht: window.Libp2p.kadDHT({ clientMode: false }),
-        ping: window.Libp2p.ping()
+        // Delegated DHT: Offloads to public RPC—no hangs!
+        dht: window.Libp2p.kadDHT({
+          clientMode: true,
+          kBucketSize: 20,
+          router: window.Libp2PDelegatedPeerRouting.delegatedPeerRouting(kuboClient),
+        }),
+        ping: window.Libp2p.ping(),
       },
     };
 
     helia = await window.Helia.createHelia({ Libp2p: libp2pOptions });
     fs = window.HeliaUnixfs.unixfs(helia);
 
-    console.log(helia.libp2p.peerId)
+    console.log('Helia Peer ID:', helia.libp2p.peerId.toString());
 
+    await helia.libp2p.services.dht.start();
+    console.log('DHT started (delegated):', helia.libp2p.services.dht.isStarted());
 
     setInterval(() => {
       const peers = helia.libp2p.getPeers();
-      console.log('Connected peers:', peers.length, peers.map(p => p.toString()));
+      console.log('Connected peers:', peers.length, peers.map(p => p.toString().slice(0, 10) + '...'));
+      console.log('DHT routing table size:', helia.libp2p.services.dht.routingTable?.size || 'N/A');
     }, 5000);
 
     document.getElementById('upload-to-ipfs-button').disabled = false;
@@ -2252,36 +2300,55 @@ async function upload() {
     document.getElementById('cid-output').textContent += `\nRetrieved locally, size: ${data.length} bytes`;
     console.log('DHT status:', helia.libp2p.services.dht.isStarted());
     adjustTextareaHeight(document.getElementById('cid-output'));
-    console.log('Connected peers:', helia.libp2p.getPeers().length);
+    console.log('Connected pee333333333333rs:', helia.libp2p.getPeers().length);
 
     try {
-      console.log('Announcing CID to DHT');
-      await helia.routing.provide(cid);
-      console.log('Announced CID to DHT');
-      document.getElementById('cid-output').textContent += `\nAnnounced to DHT, Gateway: https://ipfs.io/ipfs/${cid.toString()}`;
-      setInterval(async () => {
-        try {
-          await helia.routing.provide(cid);
-          console.log('Re-announced CID to DHT:', cid.toString());
-        } catch (error) {
-          console.error('Re-announcement failed:', error);
-        }
-      }, 60000); // Re-announce every 60 seconds
+  console.log('Announcing CID to DHT');
+  
+  // Helper: Timeout-wrapped provide with retry
+  const provideWithRetry = async (cid, maxRetries = 10) => {
+    for (let attempt = 1; attempt <= maxRetries; attempt++) {
+      try {
+        console.log(`DHT provide attempt ${attempt}/${maxRetries}`);
+        const providePromise = helia.routing.provide(cid);
+        const timeoutPromise = new Promise((_, reject) => 
+          setTimeout(() => reject(new Error(`DHT provide timed out after 30s`)), 5000)
+        );
+        await Promise.race([providePromise, timeoutPromise]);
+        console.log(`Announced CID to DHT (success on attempt ${attempt})`);
+        return true;
+      } catch (error) {
+        console.error(`DHT provide attempt ${attempt} failed:`, error.message);
+        if (attempt === maxRetries) throw error;
+        await new Promise(resolve => setTimeout(resolve, 5000)); // Wait 5s before retry
+      }
     }
-     catch (error) {
-      console.error('DHT announcement failed:', error);
-      document.getElementById('cid-output').textContent += `\nDHT announcement failed: ${error.message}`;
+  };
+  
+  await provideWithRetry(cid);
+  
+  const shareUrl = `https://ipfs.io/ipfs/${cid.toString()}`;
+  console.log('Global access link:', shareUrl);
+  document.getElementById('cid-output').textContent += `\nAnnounced to DHT, Gateway: ${shareUrl}`;
+  
+  // Re-announce (now more robust)
+  setInterval(async () => {
+    try {
+      await provideWithRetry(cid, 1); // Single retry for intervals
+      console.log('Re-announced CID to DHT:', cid.toString());
+    } catch (error) {
+      console.error('Re-announcement failed:', error);
     }
+  }, 60000);
+  
+} catch (error) {
+  console.error('DHT announcement failed after retries:', error);
+  document.getElementById('cid-output').textContent += `\nDHT announcement failed: ${error.message}. Share CID directly with peers for P2P fetch.`;
+}
   } catch (error) {
     console.error('Error:', error);
     document.getElementById('cid-output').textContent = `Failed: ${error.message}`;
   }
-}
-
-function createFormData(fileBytes, cid) {
-  const formData = new FormData();
-  formData.append('file', new Blob([fileBytes]), cid);
-  return formData;
 }
 
 document.getElementById('fetch-from-ipfs-button').addEventListener('click', async () => {
@@ -2299,6 +2366,19 @@ async function fetchContent() {
     return;
   }
 
+  // Parse string to CID (fails if invalid)
+  let cid;
+  try {
+    cid = window.Multiformats.CID.parse(cidInput);
+  } catch (error) {
+    console.error('Invalid CID:', error);
+    document.getElementById('cid-output').textContent = `Invalid CID: ${error.message}`;
+    return;
+  }
+
+  // Get user-selected type (or default to 'image')
+  const contentType = document.getElementById('content-type')?.value || 'image';
+
   try {
     const chunks = [];
     for await (const chunk of fs.cat(cidInput)) {
@@ -2308,26 +2388,45 @@ async function fetchContent() {
     console.log('Fetched file size:', data.length);
     document.getElementById('cid-output').textContent = `Fetched CID: ${cidInput}, size: ${data.length} bytes`;
 
-    // Display the image
-    const blob = new Blob([data], { type: 'image/*' }); // Adjust MIME type if known (e.g., 'image/png')
-    const url = URL.createObjectURL(blob);
-    const img = document.createElement('img');
-    img.src = url;
-    img.alt = 'IPFS Image';
-    img.style.maxWidth = '100%'; // Optional: Responsive styling
-    const imageContainer = document.getElementById('image-container') || document.body; // Use a specific container if available
-    imageContainer.appendChild(img);
-    document.getElementById('cid-output').textContent += `\nImage displayed`;
+    // Set MIME type and display element based on content type
+    let mimeType;
+    let displayElement;
+    if (contentType === 'video') {
+      mimeType = 'video/*'; // Or more specific like 'video/mp4' if known
+      displayElement = document.createElement('video');
+      displayElement.controls = true; // Enable play/pause/scrub
+      displayElement.style.maxWidth = '100%';
+    } else {
+      mimeType = 'image/*';
+      displayElement = document.createElement('img');
+      displayElement.style.maxWidth = '100%';
+    }
 
-    // Future seeder feature: Announce as provider
+    const blob = new Blob([data], { type: mimeType });
+    const url = URL.createObjectURL(blob);
+    displayElement.src = url;
+    displayElement.alt = `${contentType.charAt(0).toUpperCase() + contentType.slice(1)} from IPFS`;
+
+    // Clear previous content and append
+    const container = document.getElementById('image-container') || document.body;
+    container.innerHTML = ''; // Clear old media
+    container.appendChild(displayElement);
+
+    document.getElementById('cid-output').textContent += `\n${contentType.charAt(0).toUpperCase() + contentType.slice(1)} displayed`;
+
+    // Announce as provider (now with proper CID)
     if (helia.libp2p.services.dht.isStarted()) {
-      await helia.routing.provide(cidInput);
+      await helia.routing.provide(cid);
       console.log('Announced as provider for CID:', cidInput);
       document.getElementById('cid-output').textContent += `\nNow seeding CID: ${cidInput}`;
     } else {
       console.warn('DHT not started, cannot announce as provider');
       document.getElementById('cid-output').textContent += `\nWarning: Could not seed due to DHT issue`;
     }
+
+    // Optional: Clean up URL after display (e.g., on page unload)
+    // window.addEventListener('beforeunload', () => URL.revokeObjectURL(url));
+
   } catch (error) {
     console.error('Fetch error:', error);
     document.getElementById('cid-output').textContent = `Fetch failed: ${error.message}`;
